--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Improvements module specifications",
   "main": "index.js",
   "scripts": {
-    "start": "node ./node_modules/.bin/cucumber-js",
+    "start": "node index.js",
     "test": "node ./node_modules/.bin/cucumber-js"
   },
   "repository": {
@@ -24,6 +24,8 @@
   "homepage": "https://github.com/ImproveMyTown/improvements_spec#readme",
   "dependencies": {
     "cucumber": "^2.0.0-rc.6",
-    "expect.js": "^0.3.1"
+    "cucumber-html-reporter": "^0.3.7",
+    "expect.js": "^0.3.1",
+    "express": "^4.14.1"
   }
 }
